# bondage

./: .gitignore  Cargo.toml  README.md  Rope.md  TODO.md  roped-hash_check.md  source_map.md
.cargo/: config.toml
docs/: AdvancedRope.md  Rope.md  system-interactive.txt  system-regular.txt
src/: kit.rs  lib.rs  main.rs  policy.rs  prompt_file_injector.rs  render.rs  tmux.rs  tools.rs  util.rs
src/rope/: config.rs  executor.rs  interactive.rs  main.rs  render.rs  tmux_orchestration.rs  tmux_utils.rs
src/tools/: tool_bash.rs  tool_lookup.rs  tool_write.rs
work/: agent-turn-failed-llm.md  another-failure-mode-need.md  architectural-maybe-duplication-between.md  atheuristic-maybe-makes-sense.md  doom-loops-need-nudge.md  far-future-batched-tool.md  gemini31-too-dumb-follow.md  gemini_streaming_tool_call_fix.md  glm_critique.md  idea-interactive-mode-eat.md  idea-parameter-rope-maybe.md  ideally-collect-all-tool.md  interactive-mode-probably-check.md  interactivepersisting-rope-mode-where.md  investigate-empty-web-lookup.md  make-rope-take-file.md  need-limit-tool-calls.md  possibly-want-autoclose-tmuxed.md  prompt-processor-expandsembeds-files.md  reasonable-default-polity-pls.md  surface-utility-picks-toplevel.md  task-need-create-architecture.md  theres-some-doomlooping-glm.md  tmux_sleeps_critique.md  yy-answer-permission-questions.md
