[package]
name = "bondage"
version = "0.1.0"
edition = "2024"

[dependencies]
genai = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures-util = "0.3"
toml = "0.8"

[[bin]]
name = "rope"
path = "src/main.rs"




