[package]
name = "bondage"
version = "0.1.0"
edition = "2024"

[dependencies]
genai = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
futures-util = "0.3"
toml = "1.1"
termimad = "0.34.1"

[[bin]]
name = "rope"
path = "src/rope/main.rs"




